syntax = "proto3";
package pbsample;
option go_package = "./;pbsample";
import "services/generate/google/protobuf/timestamp.proto";
import "services/generate/google/protobuf/empty.proto";

message Test {
  string text = 1;
  repeated string texts = 2;
  map<string, Test> tests = 3;
  google.protobuf.Empty empty = 4;
  google.protobuf.Timestamp created_at = 5;
}

// AFTER CODE GENERATED. DO NOT EDIT //

message GooseDBVersion {
	int64 id = 1;
	int64 version_id = 2;
	bool is_applied = 3;
	google.protobuf.Timestamp tstamp = 4;
}

message GooseDBVersionSlice {
	repeated GooseDBVersion slice = 1;
}

message Order {
	string id = 1;
	string user_id = 2;
	int64 number = 3;
	string status = 4;
	google.protobuf.Timestamp created_at = 5;
	google.protobuf.Timestamp updated_at = 6;
	google.protobuf.Timestamp deleted_at = 7;
}

message OrderSlice {
	repeated Order slice = 1;
}

message Role {
	string id = 1;
	string code = 2;
	string description = 3;
}

message RoleSlice {
	repeated Role slice = 1;
}

message User {
	string id = 1;
	string login = 2;
	string description = 3;
	string price = 4;
	float summa_one = 5;
	double summa_two = 6;
	int64 cnt = 7;
	int32 cnt2 = 8;
	int64 cnt4 = 9;
	int64 cnt8 = 10;
	bool is_online = 11;
	bytes metrika = 12;
	int64 duration = 13;
	bytes data = 14;
	repeated string alias = 15;
	google.protobuf.Timestamp created_at = 16;
	google.protobuf.Timestamp updated_at = 17;
	google.protobuf.Timestamp deleted_at = 18;
}

message UserSlice {
	repeated User slice = 1;
}
